fix: fix code element wrapping

--- a/output/css/custom.css
+++ b/output/css/custom.css
@@ -1229,3 +1229,7 @@ p {
 .blg-text h3 {
 	margin-top: 24px;
 }
+
+.white-space-normal {
+	white-space: normal;
+}
